--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
+    <div id="toTop"><i class="fas fa-chevron-up"></i></div>
     <div id="boody">
         <div class="mobile-menu">
             <div class="close-menu">X</div>
@@ -54,12 +55,13 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 left-content">
-                        <p class="left-content-txt">
+                        <p class="left-content-txt anim-item">
                             It is a good time for the great taste of burgers
                         </p>
-                        <h1 class="left-content-title">BURGER<br><span>WEEK</span></h1>
+                        <h1 class="left-content-title anim-item">BURGER</h1>
+                        <p class="left-content-text anim-item">WEEK</p>
                     </div>
-                    <div class="col-lg-7 right-content">
+                    <div class="col-lg-7 right-content anim-scale">
                         <img src="img/header-burger.png" class="img-fluid" alt="">
                         <div class="price-border">
                             <div class="price-block">
@@ -230,6 +232,10 @@
             </div>
         </footer>
     </div>
+    <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
