deleted some code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-    <div id="toTop"><i class="fas fa-chevron-up"></i></div>
+    <div id="toTop">
+        <p>&#8593;</p>
+    </div>
     <div id="boody">
         <div class="mobile-menu">
             <div class="close-menu">X</div>
