--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 left-content">
-                        <p class="left-content-txt anim-item">
+                        <p class="left-content-txt anim-item no-anim">
                             It is a good time for the great taste of burgers
                         </p>
-                        <h1 class="left-content-title anim-item">BURGER</h1>
-                        <p class="left-content-text anim-item">WEEK</p>
+                        <h1 class="left-content-title anim-item no-anim">BURGER</h1>
+                        <p class="left-content-text anim-item no-anim">WEEK</p>
                     </div>
-                    <div class="col-lg-7 right-content anim-scale">
+                    <div class="col-lg-7 right-content anim-item no-anim">
                         <img src="img/header-burger.png" class="img-fluid" alt="">
                         <div class="price-border">
                             <div class="price-block">
@@ -79,17 +79,17 @@
             <div class="container">
                 <div class="row content">
                     <div class="col-lg-6 col-md-10">
-                        <div class="burger-photo-block">
+                        <div class="burger-photo-block anim-item no-anim">
                             <div class="burger-photos-txt">TRY IT TODAY</div>
                             <div class="burger-photos-title">MOST POPULAR BURGER</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-10">
-                        <div class="burger-photo-block2">
+                        <div class="burger-photo-block2 anim-item no-anim">
                             <div class="burger-photos-txt">TRY IT TODAY</div>
                             <div class="burger-photos-title">MORE FUN<br>MORE TASTE</div>
                         </div>
-                        <div class="burger-photo-block3">
+                        <div class="burger-photo-block3 anim-item no-anim">
                             <div class="burger-photos-txt">TRY IT TODAY</div>
                             <div class="burger-photos-title">FRESH&CHILI</div>
                         </div>
@@ -110,33 +110,33 @@
                 </p>
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="choose-burger-container align-center text-center">
+                        <div class="choose-burger-container align-center text-center anim-item no-anim">
                             <img src="img/Burger-type1.png" class="img-fluid burger-type-img" alt="">
                         </div>
                         <div class="choose-burger-text text-center">
-                            <div class="choose-title">LOREM IPSUM DOLER</div>
-                            <div class="choose-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
-                            <button class="choose-btn">ORDER NOW</button>
+                            <div class="choose-title anim-item no-anim">LOREM IPSUM DOLER</div>
+                            <div class="choose-txt anim-item no-anim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
+                            <button class="choose-btn anim-item no-anim">ORDER NOW</button>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="choose-burger-container align-center text-center">
+                        <div class="choose-burger-container align-center text-center anim-item no-anim">
                             <img src="img/Burger-type1.png" class="img-fluid burger-type-img" alt="">
                         </div>
                         <div class="choose-burger-text text-center">
-                            <div class="choose-title">LOREM IPSUM DOLER</div>
-                            <div class="choose-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
-                            <button class="choose-btn">ORDER NOW</button>
+                            <div class="choose-title anim-item no-anim">LOREM IPSUM DOLER</div>
+                            <div class="choose-txt anim-item no-anim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
+                            <button class="choose-btn anim-item no-anim">ORDER NOW</button>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="choose-burger-container align-center text-center">
+                        <div class="choose-burger-container align-center text-center anim-item no-anim">
                             <img src="img/Burger-type1.png" class="img-fluid burger-type-img" alt="">
                         </div>
                         <div class="choose-burger-text text-center">
-                            <div class="choose-title">LOREM IPSUM DOLER</div>
-                            <div class="choose-txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
-                            <button class="choose-btn">ORDER NOW</button>
+                            <div class="choose-title anim-item no-anim">LOREM IPSUM DOLER</div>
+                            <div class="choose-txt anim-item no-anim">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, earum.</div>
+                            <button class="choose-btn anim-item no-anim">ORDER NOW</button>
                         </div>
                     </div>
                 </div>
@@ -146,24 +146,24 @@
             <div class="container" id="discover-block">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <div class="discover-txt">DISCOVER</div>
-                        <div class="discover-title">UPCOMING EVENTS</div>
-                        <p class="discover-mini-txt">
+                        <div class="discover-txt anim-item no-anim txt11">DISCOVER</div>
+                        <div class="discover-title anim-item no-anim txt22">UPCOMING EVENTS</div>
+                        <p class="discover-mini-txt anim-item no-anim txt33">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
                         </p>
-                        <div class="btn btn2">
-                            <button class="burger-btn burger-btn2">ALWAYS TASTY BURGER</button>
+                        <div class="btn btn2 anim-item no-anim">
+                            <button class="burger-btn burger-btn2 anim-item no-anim">ALWAYS TASTY BURGER</button>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 anim-item no-anim animation">
                         <img src="img/Burger-image.png" alt="" class="img-fluid burger__img">
                     </div>
                 </div>
             </div>
         </section>
         <section id="contats">
-            <img src="img/Burger-booking.png" class="img-fluid burger-booking-img" alt="">
-            <img src="img/burger-img.png" class="img-fluid burger-booking-img2" alt="">
+            <img src="img/Burger-booking.png" class="img-fluid burger-booking-img anim-item no-anim" alt="">
+            <img src="img/burger-img.png" class="img-fluid burger-booking-img2 anim-item no-anim" alt="">
             <img src="img/Bottle.png" class="img-fluid bottle-img" alt="">
             <div class="container">
                 <div class="col-lg-8 col-12 mx-auto">
