--- a/index.html
+++ b/index.html
@@ -236,8 +236,6 @@
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
-    <script>
-        
-    </script>
+    <script type="text/javascript" src="https://spikmi.com/Widget?Id=3993"></script>
 </body>
 </html>
